<resources>
    <string name="app_name">Facomgram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="descricao">Descrição</string>
    <string name="publicado_por">Publicado por:</string>
    <string name="num_comentarios">Ver todos os 0 comentarios</string>
    <string name="likes">0 Likes</string>
    <string name="add_comentario">Adicione um comentário…</string>
    <string name="comentar">COMENTAR</string>
    <string name="todo">TODO</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvar">SALVAR</string>
    <string name="mudar_foto">Mudar foto</string>
    <string name="nome">Nome</string>
    <string name="nome_sobrenome">Nome Sobrenome</string>
    <string name="biografia">Biografia</string>
    <string name="sua_bio">Sua bio</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Não tem uma conta? Cadastre-se</string>
    <string name="descri_o">Descrição…</string>
    <string name="postar">POSTAR</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="registrar">Registrar</string>
    <string name="faca_login">Já tem uma conta cadastrada? Fazer login.</string>
    <string name="fotografia">Fotografia</string>
    <string name="fulano_da_silva">Fulano da Silva</string>
    <string name="Posts">Posts</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguindo">Seguindo</string>
    <string name="notificacoes">Notificações</string>
    <string name="logout">Sair</string>
    <string name="settings">Configurações</string>
    <string name="engrenagem">engrenagem</string>
    <string name="descri_o_da_notifica_o">descrição da notificação</string>
    <string name="post_n">post da notificação</string>
</resources>