<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".Activity.RegistrarActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/hint"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edt_emailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/edt_senhaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/edt_confirmaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/confirme_a_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/hint" />

    <Button
        android:id="@+id/btn_registrarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/registrar"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"/>

    <TextView
        android:id="@+id/txt_logar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/faca_login" />

</LinearLayout>