<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_usernameFP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/configuracoesPF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_menu_perfil"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barFP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profileFP"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_postsPF"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Posts" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_seguidoresFP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_seguidoresPF"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seguidores" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_seguindoFP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_seguindoPF"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seguindo" />

                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_editarPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_black_background"
                        android:textColor="@color/white"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txt_nomeFP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="-5dp"
                android:background="@drawable/button_black_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/fotosFP"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_grid_fotos"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/fotosSalvasFP"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_fotos_salvas"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_fotosPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_fotosSalvasPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>